Fix society Slider and Header z-index

--- a/src/Home/Society/custom-society.css
+++ b/src/Home/Society/custom-society.css
@@ -1,8 +1,6 @@
 .societycontainer {
     padding-top: 100px;
     padding-bottom: 50px;
-    z-index: 2;
-    position: relative; /* Add position relative */
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2); /* Add the box shadow properties */
   }
   
