--- a/src/component/common/Header.css
+++ b/src/component/common/Header.css
@@ -9,6 +9,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 2;
     padding: 20px 20px;
     background: rgba(255, 255, 255, .1);
     display: flex;
